; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/iscsid/extr_chap.c_rchap_get_response.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/iscsid/extr_chap.c_rchap_get_response.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rchap = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @rchap_get_response(%struct.rchap* %0) #0 {
  %2 = alloca %struct.rchap*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store %struct.rchap* %0, %struct.rchap** %2, align 8
  %6 = load %struct.rchap*, %struct.rchap** %2, align 8
  %7 = call i32 @rchap_get_response_bin(%struct.rchap* %6, i8** %3, i64* %4)
  %8 = load i8*, i8** %3, align 8
  %9 = load i64, i64* %4, align 8
  %10 = call i8* @chap_bin2hex(i8* %8, i64 %9)
  store i8* %10, i8** %5, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @free(i8* %11)
  %13 = load i8*, i8** %5, align 8
  ret i8* %13
}

declare dso_local i32 @rchap_get_response_bin(%struct.rchap*, i8**, i64*) #1

declare dso_local i8* @chap_bin2hex(i8*, i64) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
